# verifier-bottleneck-math

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  modular-addition-sandbox-smoke-record.json  modular-addition-sandbox-smoke-summary.json  pyproject.toml  requirements-arithmetic-job.txt  requirements-arithmetic-qwen-job.txt  requirements-rl-compositionality-gpu.txt  requirements-sandbox-job.txt  requirements.txt
configs/arithmetic/: countdown_symbolic_composition_qwen_single_seed.yaml  (+1 more)
game24_composition/: .env.example  README.md  check_yandex_env.sh  pyproject.toml  requirements.txt  run_first5.sh  run_phase2.sh  run_remote_gpu.sh
game24_composition/configs/: default.yaml
game24_composition/src/game24_composition/: __init__.py  cache_model.py  checker.py  collect_accepted_ab.py  evaluate.py  formatters.py  generate_data.py  noisy_checker_eval.py  plots.py  self_check.py  solver.py  summarize_phase2.py  sweep_exploration.py  symbols.py  train_sft.py  utils.py
jobs/: countdown-symbolic-composition-qwen-single-seed.yaml  countdown-symbolic-composition-scratch-single-seed.yaml  cpu-smoke.yaml  gpu-dependencies-a100-smoke.yaml  gpu-dependencies-t4-smoke.yaml  gpu-dependencies-v100-smoke.yaml  gpu-smoke.yaml  modular-addition-paper.yaml  modular-addition-sandbox-smoke.yaml
modp_verifier_sandbox/: README.md  modp_verifier_experiment.py  run_modp_verifier.sh
notebooks/: 00_datasphere_setup.ipynb  00_setup_smoke_test.ipynb  01_experiment_template.ipynb  02_modular_addition_sandbox.ipynb  run_colab_experiments.ipynb
scripts/: analyze_arithmetic_job.py  colab_install.sh  run_kaggle_experiments.py  setup_jupyter.py  submit_job.py
tests/: test_cli.py  test_countdown_analysis.py  test_countdown_composition.py  test_dependency_report.py  test_job_configs.py  test_jupyter_notebook.py  test_jupyter_setup.py  test_submit_job.py
(+40 files in other folders)
