[build-system]
requires = ["setuptools==75.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "verifier-bottleneck"
version = "0.1.0"
description = "Research infrastructure for studying the verifier bottleneck"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy==1.15.0",
    "pytest==8.3.5",
    "PyYAML==6.0.2",
    "ruff==0.11.2",
]
sandbox = [
    "PyYAML==6.0.2",
]

[project.scripts]
verifier-bottleneck-report = "verifier_bottleneck.cli:main"
verifier-bottleneck-jupyter-setup = "verifier_bottleneck.jupyter_setup:main"
verifier-bottleneck-mod-add = "verifier_bottleneck.experiments.modular_addition:main"
verifier-bottleneck-compare = "verifier_bottleneck.experiment_comparison:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = "verifier_bottleneck.training.tiny_transformer"
ignore_missing_imports = true
disallow_subclassing_any = false
warn_return_any = false
